--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "pocketpages": ">=0.22.3",
     "pocketpages-plugin-auth": "^0.2.2",
+    "pocketpages-plugin-datastar": "^0.2.0",
     "pocketpages-plugin-js-sdk": "^0.2.0"
   },
   "files": [
